# TrackerMonitor

./: CMakeLists.txt  README.md
src/: logger.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trackermemory.cpp
